# openclawd-main

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_SNIPPETS.md  INTEGRATION_STRATEGY.md  LICENSE.md  ONBOARDING.md  README.md  SECURITY.md  SECURITY_VAULT_INTEGRATION.md  STACK.md  SUPPORT.md  install.sh  package.json
.githooks/: pre-commit  pre-push
clawd-vault-master/: .gitignore  AGENT-TASK.md  LICENSE  README.md  policy.example.yaml  pyproject.toml
clawd-vault-master/docs/: architecture.md  audit-pass-1.md  credential-lifecycle.md  migration-0.1-to-0.2.md  operator-guide.md  threat-model.md
clawd-vault-master/skills/hermes-vault-access/: SKILL.md
clawd-vault-master/skills/templates/: base-agent-skill.md  subagent-skill.md
clawd-vault-master/src/hermes_vault/: __init__.py  audit.py  broker.py  cli.py  config.py  crypto.py  detectors.py  logging_redaction.py  models.py  mutations.py  permissions.py  policy.py  scanner.py  service_ids.py  skillgen.py  ui.py  vault.py  verifier.py
clawd-vault-master/tests/: test_broker.py  test_cli.py  test_end_to_end.py  test_key_management.py  test_mutations.py  test_permissions.py  test_policy.py  test_policy_preprocessing.py  test_redaction.py  test_release_regression.py  test_scanner.py  test_service_ids.py  test_skillgen.py  test_vault.py  test_verifier.py
kraken-cli-main/: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  dist-workspace.toml  gemini-extension.json  install.sh  llms.txt
kraken-cli-main/.claude-plugin/: plugin.json
kraken-cli-main/.codex-plugin/: plugin.json
kraken-cli-main/.cursor-plugin/: plugin.json
kraken-cli-main/.github/workflows/: release.yml  securesdlc.yml
kraken-cli-main/agents/: README.md  error-catalog.json  tool-catalog.json
kraken-cli-main/agents/examples/: market-monitor.sh  paper-trading-workflow.sh  portfolio-rebalance.sh
kraken-cli-main/skills/: INDEX.md  README.md
kraken-cli-main/skills/kraken-earn-staking/: SKILL.md
kraken-cli-main/skills/kraken-futures-trading/: SKILL.md
kraken-cli-main/skills/kraken-mcp-integration/: SKILL.md
kraken-cli-main/skills/kraken-paper-strategy/: SKILL.md
kraken-cli-main/skills/kraken-paper-to-live/: SKILL.md
kraken-cli-main/skills/kraken-setup/: SKILL.md
kraken-cli-main/src/: auth.rs  client.rs  config.rs  errors.rs  futures_paper.rs  lib.rs  main.rs  paper.rs  shell.rs  telemetry.rs
kraken-cli-main/src/commands/: account.rs  auth.rs  earn.rs  funding.rs  futures.rs  futures_paper.rs  futures_ws.rs  helpers.rs  market.rs  mod.rs  paper.rs  subaccount.rs  trade.rs  utility.rs  websocket.rs
kraken-cli-main/src/mcp/: mod.rs  registry.rs  schema.rs  server.rs
kraken-cli-main/src/output/: json.rs  mod.rs  table.rs
kraken-cli-main/tests/integration/: cli_tests.rs  mod.rs  wiremock_tests.rs
solana-attestation-service-master/: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
solana-attestation-service-master/.github/workflows/: crates-publish.yml  npm-publish.yml
solana-attestation-service-master/cereal_macro/: Cargo.toml
solana-attestation-service-master/cereal_macro/src/: lib.rs
solana-attestation-service-master/clients/rust/: Cargo.toml
solana-attestation-service-master/clients/rust/src/: lib.rs
solana-attestation-service-master/clients/typescript/: .npmignore  package.json  pnpm-lock.yaml  tsconfig.json
solana-attestation-service-master/clients/typescript/src/: index.ts  pdas.ts  utils.ts
solana-attestation-service-master/clients/typescript/test/: pdas.ts  utils.ts
solana-attestation-service-master/core/: Cargo.toml
solana-attestation-service-master/core/src/: lib.rs
solana-attestation-service-master/examples/rust/attestation-flow-guide/: README.md
solana-attestation-service-master/examples/rust/attestation-flow-guide/standard-demo/: .gitignore  Cargo.toml
solana-attestation-service-master/examples/rust/attestation-flow-guide/standard-demo/src/: main.rs
solana-attestation-service-master/examples/rust/attestation-flow-guide/tokenization-demo/: Cargo.toml
solana-attestation-service-master/examples/rust/attestation-flow-guide/tokenization-demo/src/: main.rs
solana-attestation-service-master/examples/typescript/: setup-koranet-credential.ts  setup-koranet-example-attestation.ts  setup-koranet-schema.ts
solana-attestation-service-master/examples/typescript/attestation-flow-guides/: README.md  package.json  tsconfig.json
solana-attestation-service-master/examples/typescript/attestation-flow-guides/src/gill/: sas-standard-gill-demo.ts  sas-tokenized-gill-demo.ts
solana-attestation-service-master/idl/: solana_attestation_service.json
solana-attestation-service-master/integration_tests/: Cargo.toml
solana-attestation-service-master/integration_tests/tests/: test_change_authorized_signers.rs  test_change_schema_description.rs  test_change_schema_status.rs  test_change_schema_version.rs  test_close_attestation.rs  test_create_attestation.rs  test_create_credential.rs  test_create_schema.rs  test_tokenization.rs
solana-attestation-service-master/integration_tests/tests/helpers/: mod.rs
solana-attestation-service-master/program/: Cargo.toml
solana-attestation-service-master/program/src/: constants.rs  entrypoint.rs  error.rs  events.rs  instructions.rs  lib.rs  macros.rs
solana-attestation-service-master/program/src/processor/: change_authorized_signers.rs  change_schema_description.rs  change_schema_status.rs  change_schema_version.rs  close_attestation.rs  close_tokenized_attestation.rs  create_attestation.rs  create_credential.rs  create_schema.rs  create_tokenized_attestation.rs  emit_event.rs  mod.rs  tokenize_schema.rs
solana-attestation-service-master/program/src/processor/shared/: account_checks.rs  data_utils.rs  mod.rs  pda_utils.rs
solana-attestation-service-master/program/src/state/: attestation.rs  credential.rs  discriminator.rs  mod.rs  schema.rs
solana-attestation-service-master/scripts/: generate-clients.js
(+2413 files in other folders)
