[package]
name = "kraken-cli"
version = "0.3.2"
edition = "2021"
description = "Kraken CLI — trade, query, and manage your Kraken account from the terminal"
license = "MIT"
keywords = ["kraken", "crypto", "trading", "cli", "api"]
categories = ["command-line-utilities", "finance"]
repository = "https://github.com/krakenfx/kraken-cli"
homepage = "https://github.com/krakenfx/kraken-cli"

[[bin]]
name = "kraken"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["query", "json", "rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false }
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
dirs = "6"
comfy-table = "7"
dialoguer = "0.12"
rustyline = "17"
colored = "3"
indicatif = "0.18"
rmcp = { version = "1.1", default-features = false, features = ["server", "transport-io"] }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
