[package]
name = "tests-solana-attestation-service"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
solana-attestation-service-macros = { workspace = true }
solana-attestation-service-client = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-group-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
