[package]
name = "solana-attestation-service"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl = []

[dependencies]
const-crypto = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
bs58 = { workspace = true }
