[package]
name = "solana-attestation-service-client"
version = "1.0.9"
edition = "2021"
description = "Rust client for the Solana Attestation Service"
license = "MIT"
repository = "https://github.com/solana-foundation/solana-attestation-service"

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }