[package]
name = "sas-demo"
version = "0.1.0"
edition = "2021"
 
[dependencies]
# Solana core dependencies (existing)
solana-sdk = "2.3.1"
solana-client = "2.3.2"
solana-program = "2.3.0"
solana-system-interface = "1.0.0"
 
# SPL Token Program dependencies (NEW)
spl-token-2022 = "9.0.0"
spl-token-metadata-interface = "0.7.0"
spl-associated-token-account = "7.0.0"
spl-pod = "0.5.1"
spl-token-group-interface = "0.6.0"
 
# Solana Attestation Service client (existing)
solana-attestation-service-client = "1.0.9"
 
# Async runtime (existing)
tokio = { version = "1.0", features = ["full"] }
 
# Serialization (existing)
borsh = "0.10"
 
# Error handling (existing)
anyhow = "1.0"